<resources>
    <string name="app_name" translatable="false">cultureManager</string>
    <string name="registerWeatherTitle">Register Weather</string>
    <string name="edit_weather_title">Edit Weather</string>
    <string name="name">Name</string>
    <string name="weather">Weather</string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="rain">Rain</string>
    <string name="storm">Storm</string>
    <string name="confirm_declaration">I confirm that this data belongs to my farm</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="cleaned_fields">Cleaned fields</string>
    <string name="wind_strength">Wind strength</string>
    <string name="strong">Strong</string>
    <string name="moderate">Moderate</string>
    <string name="weak">Weak</string>
    <string name="weathers">Weathers</string>
    <string name="about">About</string>
    <string name="create">Create</string>
    <string name="utfpr" translatable="false">UTFPR</string>
    <string name="felipe" translatable="false">Felipe Maciel Scalco</string>
    <string name="felipe_email" translatable="false">fscalco7@gmail.com</string>
    <string name="felipe_course">Software Engineering</string>
    <string name="app_description">A digital solution for agribusiness that transforms farm management. By integrating Weather, Activities, and Fields modules, the app enables you to track every action taken directly in the field, ensuring total production control and smarter, data-driven decision-making.</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="olders">Olders</string>
    <string name="fill_with_name">Enter name</string>
    <string name="confirm_the_declaration">Confirm the statement</string>
    <string name="select_weather">Select the weather</string>
    <string name="select_wind_strength">Select wind strength</string>
    <string name="continue_text">Continue</string>
    <string name="farm_data">Farm Details</string>
    <string name="farm_name">Farm Name</string>
    <string name="hello">Hello</string>
    <string name="hello_phrase">Let\'s start by choosing a name for your farm</string>
    <string name="plots">Plots</string>
    <string name="settings">Settings</string>
    <string name="activities">Activities</string>
    <string name="remove_weather">Remove Weather</string>
    <string name="remove_weather_message_confirm">Do you want to remove the selected weather?</string>
    <string name="error_updating_weather">Error updating weather</string>
    <string name="error_updating_farm_name">Error Updating Farm Name</string>
    <string name="success_updating_farm_name">Success Updating Farm Name</string>
    <string name="register_plot">Register Plot</string>
    <string name="area">Area (m²)</string>
    <string name="edit_plot">Edit Plot</string>
    <string name="error_updating_plot">Error updating plot</string>
    <string name="remove_plot">Remove Plot</string>
    <string name="remove_plot_confirm_message">Do you want to remove the selected plot?</string>
    <string name="plot">Plot</string>
    <string name="time_spent">Time spent</string>
    <string name="remove_activity">Remove Activity Log</string>
    <string name="remove_activity_confirm_message">Do you want to remove the activity log?</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="register_activity">Register Activity</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="minutes">minutes</string>
    <string name="enter_area">Enter area</string>
    <string name="enter_time_spent">Enter time spent</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_time">Enter time</string>
    <string name="invalid_time_spent">Invalid time spent</string>
    <string name="error_updating_activity">Error updating activity</string>
</resources>